# COSILab

./: README.md
BadgeFramework/: README.md  badge_gui.py  badge_interface.py
audio_postprocess/: README.md  requirements.txt
audio_postprocess/modules/channel_prep/: trim_timeline_by_clock.py
audio_postprocess/modules/diarization/: export_main_speaker_map.py  export_mingling1_candidates.py  render_main_speaker_audio.py
baselines/intention/: LLM_as_judge.ipynb  README.md  annotator-analysis.R  gemma_ingroup_daic.sh  model_inference.py  pre_annotation_survey_codebook.xlsx  presurvey-processor.R  process_data.ipynb  prompt_ingroup.json  pyproject.toml  semantic_similarity.ipynb
baselines/intention/src/intention_inference/: __main__.py  audio.py  cli.py  gemma.py  manifest.py  media.py  prompt.py  records.py
midge_postprocess/: README.md
video_postprocess/: README.md  __init__.py  batch_extract_segments.py  calib-project-template.json  concat_videos.py  convert_camera_calibration.py  cut_gopro_annotation_segments.py  extract_audio_from_midge.py  extract_segment_from_video.py  get_cc_from_dng.py  pyproject.toml  timecode.py  video_utils.py
video_postprocess/camera_calibration/: easymocap.py  idiap.py
video_postprocess/capturesystem/: pyproject.toml
video_postprocess/capturesystem/src/capturesystem/: README.md  convert_idiap_to_calibrator.py  extract_audio_from_video.py  extract_redacted_clips.py  fix_gopro_battery_dies_video.py  processed_images_to_video.py  raw_images_to_processed_images.py  raw_images_to_video.py  split_video_into_frames.py  timestamp.py  utils.py
video_postprocess/src/video_postprocess/: __init__.py  add_black_border_to_imgs.py  batch_extract_segments.py  concat_videos.py  convert_camera_calibration.py  convert_idiap_to_calibrator.py  cut_gopro_annotation_segments.py  extract_audio_from_video.py  extract_segment_from_video.py  fix_gopro_battery_dies_video.py  generate_calib_project.py  processed_images_to_video.py  raw_images_to_processed_images.py  raw_images_to_video.py  realsense_ioi_matcher.py  split_video_into_frames.py  sync_by_audio.py  timecode.py  timestamp.py
(+191 files in other folders)
