[project]
name = "video_postprocess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zonghuan Li", email = "z.li-25@tudelft.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "python-ffmpeg>=2.0.12",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "tqdm>=4.68.3",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
