[project]
name = "intention_inference"
version = "0.1.0"
description = "Gemma 4 multimodal ingroup intention inference from a JSON manifest"
readme = "README.md"
authors = [
    { name = "Zonghuan Li", email = "z.li-25@tudelft.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "numpy",
    "librosa",
    "soundfile",
    "Pillow",
    "av",
]

[project.scripts]
intention-inference = "intention_inference.cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
