[project]
name = "capturesystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zonghuan Li", email = "z.li-25@tudelft.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]

[project.scripts]
capturesystem = "capturesystem:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
